@@ -92,79 +92,6 @@ int bus_async_unregister_and_exit(sd_event *e, sd_bus *bus, const char *name) {
         return 0;
 }
 
-int bus_event_loop_with_idle(
-                sd_event *e,
-                sd_bus *bus,
-                const char *name,
-                usec_t timeout,
-                check_idle_t check_idle,
-                void *userdata) {
-        bool exiting = false;
-        int r, code;
-
-        assert(e);
-        assert(bus);
-        assert(name);
-
-        for (;;) {
-                bool idle;
-
-                r = sd_event_get_state(e);
-                if (r < 0)
-                        return r;
-                if (r == SD_EVENT_FINISHED)
-                        break;
-
-                if (check_idle)
-                        idle = check_idle(userdata);
-                else
-                        idle = true;
-
-                r = sd_event_run(e, exiting || !idle ? (uint64_t) -1 : timeout);
-                if (r < 0)
-                        return r;
-
-                if (r == 0 && !exiting) {
-
-                        r = sd_bus_try_close(bus);
-                        if (r == -EBUSY)
-                                continue;
-
-                        /* Fallback for dbus1 connections: we
-                         * unregister the name and wait for the
-                         * response to come through for it */
-                        if (r == -ENOTSUP) {
-
-                                /* Inform the service manager that we
-                                 * are going down, so that it will
-                                 * queue all further start requests,
-                                 * instead of assuming we are already
-                                 * running. */
-                                sd_notify(false, "STOPPING=1");
-
-                                r = bus_async_unregister_and_exit(e, bus, name);
-                                if (r < 0)
-                                        return r;
-
-                                exiting = true;
-                                continue;
-                        }
-
-                        if (r < 0)
-                                return r;
-
-                        sd_event_exit(e, 0);
-                        break;
-                }
-        }
-
-        r = sd_event_get_exit_code(e, &code);
-        if (r < 0)
-                return r;
-
-        return code;
-}
-
 int bus_name_has_owner(sd_bus *c, const char *name, sd_bus_error *error) {
         _cleanup_bus_message_unref_ sd_bus_message *rep = NULL;
         int r, has_owner = 0;
